# pathtracer

./: .clang-format  Doxyfile  Gemfile  README.md  _config.yml  index.md
.github/workflows/: cmake.yml
_data/: navigation.yml
_drafts/: acceleration-structures.md  multithreading-and-time.md
_pages/: about.md
_posts/: 2021-03-30-welcome-to-jekyll.md  2021-03-31-coding-a-new-path-tracer.md  2021-04-05-multiple-camera-types.md  2021-04-06-welcome-to-jekyll.markdown  2021-04-07-first-images-first-mistakes.md  2021-04-16-multithreading-and-time.md  2021-04-20-acceleration-structures.md  multithreading-and-time.md  shadow-ray-optimization.md
scenes/: horse.xml  horse_and_mug.xml
scenes/akif_uslu/: berserker.xml  car.xml  low_poly.xml  tower.xml  windmill.xml
scripts/: archive.sh
src/: CMakeLists.txt  Config.h.in  Config.hpp.in  GlobalOptions.hpp  config.h.in  main.cpp
src/AccelerationStructures/: AccelerationStructure.hpp  AccelerationStructureConstants.hpp  BoundingBox.cpp  BoundingBox.hpp  BoundingVolumeHierarchy.cpp  BoundingVolumeHierarchy.hpp  BruteForce.cpp  BruteForce.hpp  CMakeLists.txt  KDTree.cpp  KDTree.hpp  KDTreeNode.cpp  KDTreeNode.hpp
src/Image/: CMakeLists.txt  Image.hpp  ImageExporter.hpp  PNGExporter.cpp  PNGExporter.hpp
src/LinearAlgebra/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  Vector.cpp  Vector.hpp
src/Objects/: CMakeLists.txt  Material.cpp  Material.hpp  PointLight.cpp  PointLight.hpp  Ray.cpp  Ray.hpp  Scene.hpp
src/Objects/Camera/: CMakeLists.txt  Camera.cpp  Camera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
src/Objects/Surface/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Sphere.cpp  Sphere.hpp  Surface.cpp  Surface.hpp  Triangle.cpp  Triangle.hpp
src/Parser/: CMakeLists.txt  PLYReader.cpp  PLYReader.hpp  Parser.cpp  Parser.hpp  XMLParser.cpp  XMLParser.hpp
src/PathTracer/: CMakeLists.txt  PathTracer.cpp  PathTracer.hpp
src/Test/: CMakeLists.txt  CameraTest.cpp  LinearAlgebraTestCommon.hpp  MaterialTest.cpp  MatrixTest.cpp  MeshTest.cpp  ParserTest.cpp  PathTracerTest.cpp  RayTest.cpp  SphereTest.cpp  TriangleTest.cpp  VectorTest.cpp
src/Test/ImageTest/: CMakeLists.txt  PNGExporterTest.cpp
src/Test/Mocks/: CMakeLists.txt  XMLParserMock.hpp
src/Test/ParserTest/: CMakeLists.txt  PLYReaderTest.cpp  ParserTest.cpp
src/Test/ParserTest/Scenes/: SimplePolygons.ply  SimpleScene.xml
